# jayden-ai

./: .cursorignore  .gitignore  API_USAGE.md  README_IMPROVEMENTS.md  USAGE.md  create_test_metadata.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  test_streaming.py
data/: spite_fewshots.txt  spite_lorebook.json  spite_style_profile.json  spite_system_prompt.txt
data/.cache/: data_manager_manifest.json  data_manager_progress.json
src/: analyze_spite_style.py  embed_posts.py  generate_fewshot_stubs_from_dump.py  generate_lore_and_fewshots.py  main.py  populate_igdata.py  setup.py  test_environment.py
src/spite_ai/: __init__.py  api.py  api_clean.py  api_simple.py  config.py  data_manager.py  example_usage.py  jaden_ai.py
system/: jayden.service
tests/: test_basic.py
